--- a/templates/form.html
+++ b/templates/form.html
@@ -47,37 +47,9 @@
             <div class="col-xs-3">
                 <select class="form-control">
                     <option>Date</option>
-                    <option>1</option>
-	            <option>2</option>
-		    <option>3</option>
-		    <option>4</option>
-		    <option>5</option>
-	            <option>6</option>
-		    <option>7</option>
-		    <option>8</option>
-		    <option>9</option>
-		    <option>10</option>
-		    <option>11</option>
-		    <option>12</option>
-		    <option>13</option>
-	            <option>14</option>
-		    <option>15</option>
-		    <option>16</option>
-		    <option>17</option>
-		    <option>18</option>
-		    <option>19</option>
-		    <option>20</option>
-	            <option>21</option>
-		    <option>22</option>
-		    <option>23</option>
-		    <option>24</option>
-		    <option>25</option>
-		    <option>26</option>
-		    <option>27</option>
-		    <option>28</option>
-		    <option>29</option>
-		    <option>30</option>
-		    <option>31</option>							
+                   {% for i in range(1,31) %}
+		    <option>{{ i }}</option>
+		   {% endfor %}							
                 </select>
             </div>
             <div class="col-xs-3">
@@ -100,7 +72,7 @@
             <div class="col-xs-3">
                 <select class="form-control">
 	              <option>Year</option>  
-		    {% for i in range(1940,2050) %}
+		    {% for i in range(1914,2015) %}
 		      <option>{{ i }}</option>
 		    {% endfor %}	
                 </select>
@@ -125,15 +97,15 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-xs-3">Gender:</label>
+            <label class="control-label col-xs-3">Sex:</label>
             <div class="col-xs-2">
                 <label class="radio-inline">
-                    <input type="radio" name="genderRadios" value="male"> Male
+                    <input type="radio" name="sex" value="male"> Male
                 </label>
             </div>
             <div class="col-xs-2">
                 <label class="radio-inline">
-                    <input type="radio" name="genderRadios" value="female"> Female
+                    <input type="radio" name="sex" value="female"> Female
                 </label>
             </div>
         </div>
